Implemented '/sites/countries' endpoint
