# docs/swagger.yaml
@@ -149,6 +149,19 @@ definitions:
       updated_on:
         type: string
     type: object
+  handlers.country:
+    properties:
+      code:
+        type: string
+      country_id:
+        type: integer
+      created_on:
+        type: string
+      descr:
+        type: string
+      updated_on:
+        type: string
+    type: object
 info:
   contact:
     email: marko@aretaja.org
@@ -2027,6 +2040,263 @@ paths:
       summary: Count con_types
       tags:
       - connections
+  /sites/countries:
+    get:
+      description: List countries info
+      operationId: list-countries
+      parameters:
+      - description: url encoded SQL 'LIKE' operator pattern
+        in: query
+        name: descr_f
+        type: string
+      - description: url encoded SQL 'LIKE' operator pattern
+        in: query
+        name: code_f
+        type: string
+      - description: 'min: 1; max: 100; default: 100'
+        in: query
+        name: limit
+        type: integer
+      - description: 'default: 0'
+        in: query
+        name: offset
+        type: integer
+      - description: record update time >= (unix timestamp in milliseconds)
+        in: query
+        name: updated_ge
+        type: integer
+      - description: record update time <= (unix timestamp in milliseconds)
+        in: query
+        name: updated_le
+        type: integer
+      - description: record creation time >= (unix timestamp in milliseconds)
+        in: query
+        name: created_ge
+        type: integer
+      - description: record creation time <= (unix timestamp in milliseconds)
+        in: query
+        name: created_le
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handlers.country'
+            type: array
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: List countries
+      tags:
+      - sites
+    post:
+      description: Create country
+      operationId: create-country
+      parameters:
+      - description: JSON object of country.<br />Ignored fields:<ul><li>country_id</li><li>updated_on</li><li>created_on</li></ul>
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.country'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/handlers.country'
+        "400":
+          description: Invalid request payload
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Create country
+      tags:
+      - sites
+  /sites/countries/{country_id}:
+    delete:
+      description: Delete country
+      operationId: delete-country
+      parameters:
+      - description: country_id
+        in: path
+        name: country_id
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Invalid country_id
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Delete country
+      tags:
+      - sites
+    get:
+      description: Get country info
+      operationId: get-country
+      parameters:
+      - description: country_id
+        in: path
+        name: country_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.country'
+        "400":
+          description: Invalid country_id
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "404":
+          description: Country not found
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Get country
+      tags:
+      - sites
+    put:
+      description: Update country
+      operationId: update-country
+      parameters:
+      - description: country_id
+        in: path
+        name: country_id
+        required: true
+        type: string
+      - description: JSON object of country.<br />Ignored fields:<ul><li>country_id</li><li>updated_on</li><li>created_on</li></ul>
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.country'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.country'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Update country
+      tags:
+      - sites
+  /sites/countries/{country_id}/sites:
+    get:
+      description: List country sites info
+      operationId: list-country-sites
+      parameters:
+      - description: country_id
+        in: path
+        name: country_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handlers.connection'
+            type: array
+        "400":
+          description: Invalid country_id
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: List country sites
+      tags:
+      - sites
+  /sites/countries/count:
+    get:
+      description: Count number of countries
+      operationId: count-countries
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.CountResponse'
+        "404":
+          description: Invalid route error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "405":
+          description: Invalid method error
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+        "500":
+          description: Failde DB transaction
+          schema:
+            $ref: '#/definitions/handlers.StatusResponse'
+      summary: Count countries
+      tags:
+      - sites
   /version:
     get:
       description: Return API version info
